dada_tests/format-strings/bad-parse-extra-tokens/compiler-output.ref
Error: extra tokens after end of expression
   ╭─[dada_tests/format-strings/bad-parse-extra-tokens.dada:1:10]
   │
 1 │ p = "{22 44}"
   ·          ─┬  
   ·           ╰── here
───╯
